# Darlene

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
darlene/conf/: basic.py
darlene/plugins/basic_plugins/: broadcast.py  request_apply.py  weather.py  welcome.py
darlene/plugins/darlene_plugins/darlene_friendship/: __init__.py  greetings.py  pohai.py  poke.py
darlene/plugins/darlene_plugins/darlene_help/: __init__.py  handler.py
darlene/plugins/darlene_plugins/darlene_schedule/: __init__.py  config.py  data_source.py
darlene/plugins/darlene_plugins/darlene_schedule/resources/: dinner.json  lunch.json  sleep.json  wake_up.json
darlene/plugins/darlene_plugins/darlene_vote/: __init__.py  data_source.py
darlene/plugins/utils/: darlene_logger.py  json_utils.py
darlene/utils/: __init__.py  darlene_logger.py  file_utils.py  pic_utils.py
plugins/: __init__.py  daily.py  daily_sentence.py  france_greeting.py  french_greeting.py  friend_request.py  weather.py
plugins/life_adventure/: __init__.py
plugins/sign_in/: __init__.py  data_source.py
plugins/vote/: __init__.py  data_source.py
src/plugins/: french_greeting.py
src/plugins/help/: __init__.py  handler.py
src/plugins/sign_in/: __init__.py
src/plugins/vote/: __init__.py
utils/: sqlite_utils.py
